SERVER-24320 PlanCacheIndexTree should have same sort order as MatchExpression used to generate plan cache key