src/mongo/db/query/plan_enumerator.h
@@ -102,6 +102,9 @@ public:
      *
      * Nodes in 'tree' are tagged with indices that should be used to answer the tagged nodes.
      * Only nodes that have a field name (isLogical() == false) will be tagged.
+     *
+     * The output tree is a clone identical to that used to initialize the enumerator, with tags
+     * added in order to indicate index usage.
      */
     bool getNext(MatchExpression** tree);
 
